# py-dynacli

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc.md  task.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
advanced/docstrings/: index.html
advanced/how_dynacli_works/: index.html
advanced/search-path/: index.html
advanced/state-machine/: index.html
advanced/types/: index.html
advanced/why/: index.html
docs/: index.md  types.md  why.md
docs/advanced/: docstrings.md  how_dynacli_works.md  search-path.md  state-machine.md  types.md  why.md
docs/img/: state_machine.puml
docs/manual/: cli-entrypoint.md  index.md  module-as-feature.md  package-as-feature.md  top-level-command.md
docs/todo-app/: index.md  init.md  remove-project.md  rename-project.md
manual/: index.html
manual/cli-entrypoint/: index.html
manual/module-as-feature/: index.html
manual/package-as-feature/: index.html
manual/top-level-command/: index.html
scripts/: clean.sh  format-imports.sh  format.sh  lint.sh
search/: search_index.json
src/: dynacli.py
src/dynacli/: __init__.py  dynacli.py
test/integrated/: test_dynacli.py  testcli  testcliadmin  testclinested  testclisimple  testenum
todo-app/: index.html
todo-app/init/: index.html
todo-app/remove-project/: index.html
todo-app/rename-project/: index.html
types/: index.html
(+152 files in other folders)
