[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dynacli"
authors = [{name = "BST Labs", email = "bstlabs@caios.io"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"


[project.urls]
Documentation = "https://bstlabs.github.io/dynacli"
Source = "https://github.com/bstlabs/dynacli"
Home = "https://bstlabs.github.io/dynacli"